{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 84,
  "lineage": "ed8f5266-0d8a-adff-e347-b61179373f64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f571fda387fbdbdc",
            "arn": "arn:aws:ec2:ap-south-1:129718466065:elastic-ip/eipalloc-0f571fda387fbdbdc",
            "association_id": "eipassoc-0d506cf95c2530d54",
            "domain": "vpc",
            "id": "eipalloc-0f571fda387fbdbdc",
            "instance": "i-0c67ca09892d2a823",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-004375fb00dcdc8f9",
            "private_dns": "ip-10-0-1-134.ap-south-1.compute.internal",
            "private_ip": "10.0.1.134",
            "public_dns": "ec2-13-206-135-242.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.135.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fullstack-eip"
            },
            "tags_all": {
              "Name": "fullstack-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.app_server",
            "aws_key_pair.my_key",
            "aws_security_group.main_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:129718466065:instance/i-0c67ca09892d2a823",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c67ca09892d2a823",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-004375fb00dcdc8f9",
            "private_dns": "ip-10-0-1-134.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.134",
            "public_dns": "ec2-13-233-107-253.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.107.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0df74966bd2fe7e97",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c233fd6dd7887d27",
            "tags": {
              "Name": "fullstack-app-server"
            },
            "tags_all": {
              "Name": "fullstack-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-045a425f20dd2e848"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.main_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129718466065:internet-gateway/igw-004d7cb906face295",
            "id": "igw-004d7cb906face295",
            "owner_id": "129718466065",
            "tags": {
              "Name": "fullstack-igw"
            },
            "tags_all": {
              "Name": "fullstack-igw"
            },
            "vpc_id": "vpc-0cc33ea6d2d8d6d0f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129718466065:route-table/rtb-02e37f577e7fbbb6e",
            "id": "rtb-02e37f577e7fbbb6e",
            "owner_id": "129718466065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004d7cb906face295",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullstack-public-rt"
            },
            "tags_all": {
              "Name": "fullstack-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc33ea6d2d8d6d0f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e5c172969b15841",
            "route_table_id": "rtb-02e37f577e7fbbb6e",
            "subnet_id": "subnet-0c233fd6dd7887d27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129718466065:security-group/sg-045a425f20dd2e848",
            "description": "Allow SSH, HTTP, and app ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045a425f20dd2e848",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fullstack-sg",
            "name_prefix": "",
            "owner_id": "129718466065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullstack-sg"
            },
            "tags_all": {
              "Name": "fullstack-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc33ea6d2d8d6d0f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129718466065:subnet/subnet-0c233fd6dd7887d27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c233fd6dd7887d27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129718466065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullstack-public-subnet"
            },
            "tags_all": {
              "Name": "fullstack-public-subnet"
            },
            "vpc_id": "vpc-0cc33ea6d2d8d6d0f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:129718466065:vpc/vpc-0cc33ea6d2d8d6d0f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03752b728fd009a3a",
            "default_route_table_id": "rtb-01efb4c98a124e31c",
            "default_security_group_id": "sg-05e59779ecc73c070",
            "dhcp_options_id": "dopt-087abc38ab49ca271",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc33ea6d2d8d6d0f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01efb4c98a124e31c",
            "owner_id": "129718466065",
            "tags": {
              "Name": "fullstack-vpc"
            },
            "tags_all": {
              "Name": "fullstack-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}